
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v0.38.0]]
== 0.38.0 (09.08.2019)

CAUTION: Removal of mapper script support

[quote]
____

The mapper script support has been dropped due to the deprecation of the Nashorn JavaScript engine. The functionality of mapper scripts can be replaced by usage of the new link:{{< relref "plugin-types/auth-service-plugin.asciidoc" >}}[Authentication Service Plugin API].

The `auth.mapperScriptDevMode` and `auth.mapperScriptPath` configuration options are no longer needed and have been removed.
____

icon:check[]: Plugins: The query type of plugins will now automatically be prefixed with the plugin apiName to ensure that no type conflicts can occur.

[[v0.37.1]]
== 0.37.1 (06.08.2019)

icon:plus[] Core: The core Dagger library was updated from version `2.11` to `2.24`.

icon:plus[] Logging: Additional activity information will be logged when the logger for class `io.vertx.core.eventbus.EventBus` is set to level `DEBUG`.

[[v0.37.0]]
== 0.37.0 (05.08.2019)

icon:bullhorn[] New Plugin System

[quote]
____

The Plugin System has been overhauled.

*REST API changes*

Previously plugins were assigned a UUID and could thus be managed using this uuid:

* `DELETE /admin/plugins/{uuid}`

The new plugin system will now utilize the plugin id for these REST and GraphQL API instead. The pluginId is unique to each plugin and a better and easier to grasp identifier for a plugin.

*New Java API / Structure*

The plugin API and structure has been overhauled and existing plugins need to be migrated (link:{{< relref "plugin-migration.asciidoc" >}}[Migration Guide]) to the new API in order to be deployable.

*GraphQL Plugin support*
